--- a/Review analysis/NLP_clear_page.ipynb
+++ b/Review analysis/NLP_clear_page.ipynb
@@ -40,22 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data size = 5331, Test Size = 533, Last Index = 5330\n",
-      "Dataset slices for testing: [(0, 533), (533, 1066), (1066, 1599), (1599, 2132), (2132, 2665), (2665, 3198), (3198, 3731), (3731, 4264), (4264, 4797), (4797, 5330)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Slice the dataset for testing\n",
-    "data_size = len(reviews_pos);\n",
-    "test_size = round(data_size * 0.1); # 10% of whole dataset for each round.\n",
+    "# Slice the dataset for testing, cross valitation and training\n",
+    "# 10% for testing\n",
+    "# 90% for training\n",
+    "\n",
+    "data_size = len(reviews_pos)\n",
+    "test_size = int(data_size * 0.1)\n",
     "print(\"Data size = %d, Test Size = %d, Last Index = %d\" % (data_size, test_size, test_size * 10));\n",
     "test_index = [(x * test_size, x * test_size + test_size) for x in range(10)];\n",
     "print(\"Dataset slices for testing: %s\" % test_index)"
@@ -68,7 +62,8 @@
    "outputs": [],
    "source": [
     "# Correction: include remaining reviews, if any, to the last index pair\n",
-    "test_index[9] = (test_index[9][0], data_size);"
+    "test_index[9] = (test_index[9][0], data_size);\n",
+    "print(test_index[9][0])"
    ]
   },
   {
@@ -105,17 +100,21 @@
     }
    ],
    "source": [
-    "splits = split_dataset(reviews_pos, test_index[9]);\n",
-    "pos_test = splits['test'];\n",
-    "pos_train = splits['train'];\n",
-    "print(\"Pos test size: %d, \\n Last item : %s\" % (len(pos_test), pos_test[-1]) )\n",
-    "print(\"Pos train size: %d, \\n Last item : %s\" % (len(pos_train), pos_train[0]) )\n",
+    "# Cross validation\n",
+    "'''\n",
+    "for i in range(10):\n",
+    "    splits = split_dataset(reviews_pos, test_index[i])\n",
+    "    pos_test = splits['test']\n",
+    "    pos_train = splits['train']\n",
+    "    print(\"Pos test size: %d, \\n Last item : %s\" % (len(pos_test), pos_test[-1]) )\n",
+    "    print(\"Pos train size: %d, \\n Last item : %s\" % (len(pos_train), pos_train[0]) )\n",
     "\n",
-    "splits = split_dataset(reviews_neg, test_index[9]);\n",
-    "neg_test = splits['test'];\n",
-    "neg_train = splits['train'];\n",
-    "print(\"Neg test size: %d, \\n Last item : %s\" % (len(neg_test), neg_test[-1]) )\n",
-    "print(\"Neg train size: %d, \\n Last item : %s\" % (len(neg_train), neg_train[0]) )\n"
+    "    splits = split_dataset(reviews_neg, test_index[i])\n",
+    "    neg_test = splits['test']\n",
+    "    neg_train = splits['train']\n",
+    "    print(\"Neg test size: %d, \\n Last item : %s\" % (len(neg_test), neg_test[-1]) )\n",
+    "    print(\"Neg train size: %d, \\n Last item : %s\" % (len(neg_train), neg_train[0]) )\n",
+    "'''\n"
    ]
   },
   {
@@ -37847,8 +37846,8 @@
     "\n",
     "TN = reduce(lambda x,y: x+y, neg_test_results);\n",
     "print(\"TN: %d,  FP: %d\" % (TN, len(neg_test_results) - TN))\n",
-    "\n",
-    "print(\"Accuracy = %.2f\" % ((TP+TN)/(len(pos_test_results)+len(neg_test_results))))"
+    "print(\"Accuracy = %.2f\" % ((TP+TN)/(len(pos_test_results)+len(neg_test_results))))\n",
+    "\n"
    ]
   }
  ],
